fix scrolling effect on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -777,13 +777,13 @@ h6 {
   min-height: 500px; }
   @media only screen and (max-width: 65em) and (orientation: portrait) {
     .banner {
-      background-attachment: fixed;
+      background-attachment: none;
       background-position: center;
       background-repeat: no-repeat;
       min-height: 53vh; } }
   @media only screen and (max-width: 37.5em) {
     .banner {
-      background-attachment: fixed;
+      background-attachment: none;
       background-position: center;
       background-repeat: no-repeat;
       min-height: 40vh; } }
@@ -1674,7 +1674,8 @@ div#specialBox, div#specialBox2 {
   @media only screen and (max-width: 65em) and (orientation: portrait) {
     .section-sidework {
       padding: 5rem;
-      background-position: top left; } }
+      background-position: top left;
+      background-attachment: none; } }
   @media only screen and (max-width: 37.5em) {
     .section-sidework > .row {
       display: block;
