--- a/sass/components/_subpage.scss
+++ b/sass/components/_subpage.scss
@@ -25,14 +25,14 @@
     min-height: 500px; 
 
     @include respond(tab-port-ipro) {
-        background-attachment: fixed;
+        background-attachment: none;
         background-position: center;
         background-repeat: no-repeat;
         min-height: 53vh;
     }
 
     @include respond(phone) {
-        background-attachment: fixed;
+        background-attachment: none;
         background-position: center;
         background-repeat: no-repeat;
         min-height: 40vh;
